Fix #113285: Mesh analysis not updating all multi-object-editing objects

The RNA update function was only taking into account the active object,
now changed to respect all `objects_in_edit_mode_unique_data`.

Pull Request: https://projects.blender.org/blender/blender/pulls/113294